--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "liblet"
 version = "0.1.0"
 authors = ["Kristian Notari <kristiannotari@icloud.com>"]
 edition = "2018"
+license = "MIT"
+license-file = "./LICENSE.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
